categorical rqa tutorial added

--- a/rqaContinuous.ipynb
+++ b/rqaContinuous.ipynb
@@ -23,13 +23,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\MQ20188409\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pytools\\persistent_dict.py:59: UserWarning: Unable to import recommended hash 'siphash24.siphash13', falling back to 'hashlib.sha256'. Run 'python3 -m pip install siphash24' to install the recommended hash.\n",
+      "  warn(\"Unable to import recommended hash 'siphash24.siphash13', \"\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "from utils import filter_data, interpolate_missing_data, perform_rqa\n",
+    "from utils import filter_data, interpolate_missing_data\n",
     "from utils.rqa_utils import perform_rqa\n",
     "from utils.plot_utils import plot_rqa, plot_ts_and_rqa, plot_windowed_ts_and_rqa"
    ]
