cont crqa added

--- a/rqaCategorical.ipynb
+++ b/rqaCategorical.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Categorical RQA (catRQA) is used to examine the dynamics of discrete behaviour sequences, such as song lyrics (lyricsA.txt) or eye movements between different locations (eyemovs_1.txt). Recurrence analysis allows us to visualise the dynamics of a behaviour, by plotting 'recurrent' states on a 2D recurrence plot. Here, an integer number sequence is mapped to the orthogonal axis 𝑥𝑖 = 1...𝑛 and 𝑦𝑗 = 1...𝑛, of the 2-dimensional plot, and the states 𝑥𝑖 and 𝑦𝑗 that reoccur are plotted (represented by blue points in the recurrence plot). From the plot, one can determine the degree of repetition, the length of repetitive sequences, and other important patterns in the data. RQA provides measures to quantify these properties, such as:\n",
+    "Categorical RQA (catRQA) is used to examine the dynamics of discrete behaviour sequences, such as [song lyrics](data/rqaCategorical/lyricsA.txt) or [eye movements](data/rqaCategorical/eyemovs_1.txt) between different locations. Recurrence analysis allows us to visualise the dynamics of a behaviour, by plotting 'recurrent' states on a 2D recurrence plot. Here, an integer number sequence is mapped to the orthogonal axis 𝑥𝑖 = 1...𝑛 and 𝑦𝑗 = 1...𝑛, of the 2-dimensional plot, and the states 𝑥𝑖 and 𝑦𝑗 that reoccur are plotted, indicated by blue points in the recurrence plot. From the plot, we can determine the degree of repetition, the length of repetitive sequences, and other important patterns in the data. RQA quantifies these properties through various metrics, including:\n",
     "\n",
     "- Recurrence Rate (%REC): The percentage of recurrent points in the plot, which indicates how often states reoccur.\n",
     "- Determinism (%DET): The percentage of recurrent points that form diagonal lines of at least a given length (e.g., 2 points), indicating patterns that repeat in the same order.\n",
@@ -22,7 +22,7 @@
     "\n",
     "#### Parameters for Running Categorical RQA\n",
     "\n",
-    "To run categorical RQA, we need to select three parameters:\n",
+    "To run categorical RQA, we need to set three parameters:\n",
     "\n",
     "- Time delay - This represents the interval between samples required to unfold the temporal structure of a system's trajectory. The appropriate delay helps to reconstruct the system’s dynamics in the phase space. In categorical RQA, this is typically set to 1.\n",
     "- Embedding dimension - This is the number of dimensions needed to recover the system's phase space. For categorical data, this is typically set to 1.\n",
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that all the utilities are loaded, it's time to apply RQA to some real data—in this case, song lyrics (lyricsA.txt).\n",
+    "Now that all the utilities are loaded, it's time to apply RQA to some real data—in this case, [song lyrics](data/rqaCategorical/lyricsA.txt). \n",
     "\n",
     "First, we need to represent the lyrics as a sequence of categorical integers. This means each word is assigned a unique number, starting from the first word and moving forward (e.g., ‘I’ = 1, ‘need’ = 2, ‘to’ = 3, etc.). For the files we're using, this encoding has already been done for you.\n",
     "\n",
@@ -134,7 +134,7 @@
     "- Maxline: 15 - This metric identifies the longest sequence of repetitive word usage, helping us understand the longest repeating phrases in the song.\n",
     "- Meanline: 2.6 - This is the average length of those repeating patterns, giving us insight into how long typical repeated phrases are.\n",
     "\n",
-    "Now, let's see how these metrics compare to a different song. Click \"play\" on the code chunk below to run the RQA on another set of lyrics and observe the differences."
+    "Now, let's see how these metrics compare to a different song. Click \"play\" on the code chunk below to run the RQA on another [set of lyrics](data/rqaCategorical/lyricsB.txt) and observe the differences."
    ]
   },
   {
@@ -215,7 +215,7 @@
     "\n",
     "To expand your understanding of categorical RQA, you can try the following:\n",
     "\n",
-    "1. Analyse other time series: Repeat the analyses above with other types of categorical data such as eye movements (e.g., eyemoves_1.txt) or emotion data (e.g., emotion1-all-a.txt). \n",
+    "1. Analyse other time series: Repeat the analyses above with other types of categorical data such as [eye movements](data/rqaCategorical/eyemovs_1.txt) or [emotion data](data/rqaCategorical/emotion1-all-a.txt).\n",
     "2. Experiment with other parameters: Although most nominal or categorical data uses the following parameters - delay = 1, embedding dimension = 1, radius = 0 (or .0001), try changing these to see how differences in the parameters affect the recurrence plots and metrics."
    ]
   }
