dfa added, readme updated

--- a/crqaContinuous.ipynb
+++ b/crqaContinuous.ipynb
@@ -24,8 +24,8 @@
     "\n",
     "Much like [Continuous RQA](rqaContinuous.ipynb), running CRQA on continuous data, requires us to select three parameters:\n",
     "\n",
-    "- Time delay: This represents the interval between samples required to unfold the temporal structure of a system's trajectory. The appropriate delay helps to reconstruct the system’s dynamics in the phase space. For continuous RQA, time delay is typically calculated using an average mutual information (AMI) analysis. To learn more about this, see [ami.ipynb](ami.ipynb) in the current tutorial.\n",
-    "- Embedding dimension: This is the number of dimensions needed to recover the system's phase space. For continuous RQA, embedding dimension is typically calculated using a false nearest neighbors (FNN) analysis. To learn more about this, see [fnn.ipynb](fnn.ipynb) in the current tutorial.\n",
+    "- Time delay: This represents the interval between samples required to unfold the temporal structure of a system's trajectory. The appropriate delay helps to reconstruct the system’s dynamics in the phase space. For continuous CRQA, time delay is typically calculated using an average mutual information (AMI) analysis. To learn more about this, see [ami.ipynb](ami.ipynb) in the current tutorial.\n",
+    "- Embedding dimension: This is the number of dimensions needed to recover the system's phase space. For continuous CRQA, embedding dimension is typically calculated using a false nearest neighbors (FNN) analysis. To learn more about this, see [fnn.ipynb](fnn.ipynb) in the current tutorial.\n",
     "- Radius: This defines how close two states must be to be considered recurrent. Unlike categorical RQA, the radius for continuous data is a threshold based on a distance metric (e.g., Euclidean distance), ensuring that nearby—but not necessarily identical—states are considered recurrent.\n"
    ]
   },
@@ -35,16 +35,25 @@
    "source": [
     "#### Let's Practice Running CRQA on Continuous Data\n",
     "\n",
-    "Before we begin, we need to import and load various packages and utilities. These will allow us to import the data, manipulate it, run the CRQA analysis, and create visualizations to explore our results.\n",
+    "Before we begin, we need to import and load various packages and utilities. These will allow us to import the data, manipulate it, run CRQA, and create visualisations to explore our results.\n",
     "\n",
     "The code below will do all the setup for you. Simply click the \"play\" button on the left to run the code, and we'll be ready to start our analysis. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\MQ20188409\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pytools\\persistent_dict.py:59: UserWarning: Unable to import recommended hash 'siphash24.siphash13', falling back to 'hashlib.sha256'. Run 'python3 -m pip install siphash24' to install the recommended hash.\n",
+      "  warn(\"Unable to import recommended hash 'siphash24.siphash13', \"\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -64,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +319,7 @@
     "\n",
     "To expand your understanding of continuous CRQA, you can try the following:\n",
     "\n",
-    "1. Analyse other time series: Repeat the analyses above with other types of continuous data such as [REPLACE](data/rqaContinuous/sin.txt).\n",
+    "1. Analyse other time series: Repeat the analyses above with other types of continuous data such as [dyadic pendulum swinging](data/rqaContinuous/pendulums.txt).\n",
     "2. Experiment with other parameters: Previously, we experimented with different radii values. Now, try adjusting the time delay or embedding dimension to see how these parameters impact the recurrence plots and CRQA metrics.\n",
     "3. Learn how to select an appropriate delay and embedding dimension: Head over to [ami.ipynb](ami.ipynb) or [fnn.ipynb](fnn.ipynb) within this tutorial to learn more about setting the hyperparameters required for continuous CRQA.\n",
     "4. Run a windowed CRQA: To assess how recurrence patterns change over time, explore [rqaWindowed.ipynb](rqaWindowed.ipynb) which walks you through performing windowed CRQA."
