--- a/rqaCategorical.ipynb
+++ b/rqaCategorical.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "To run categorical RQA, we need to set three parameters:\n",
     "\n",
-    "- Time delay - This represents the interval between samples required to unfold the temporal structure of a system's trajectory. The appropriate delay helps to reconstruct the system’s dynamics in the phase space. In categorical RQA, this is typically set to 1.\n",
+    "- Time delay - This represents the interval between samples required to unfold the temporal structure of a system's trajectory. The appropriate delay helps to reconstruct the system’s dynamics in the phase space. In catRQA, this is typically set to 1.\n",
     "- Embedding dimension - This is the number of dimensions needed to recover the system's phase space. For categorical data, this is typically set to 1.\n",
     "- Radius - This defines how close two states must be to be considered recurrent. In catRQA, the radius is set to zero or a very small value, ensuring that only exact matches between categorical states are considered recurrent."
    ]
@@ -35,7 +35,7 @@
    "source": [
     "#### Let's Practice Running RQA on Categorical Data\n",
     "\n",
-    "Before we begin, we need to import and load various packages and utilities. These will allow us to import the data, manipulate it, run the RQA analysis, and create visualizations to explore our results.\n",
+    "Before we begin, we need to import and load various packages and utilities. These will allow us to import the data, manipulate it, run RQA, and create visualisations to explore our results.\n",
     "\n",
     "The code below will do all the setup for you. Simply click the \"play\" button on the left to run the code, and we'll be ready to start our analysis. "
    ]
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that all the utilities are loaded, it's time to apply RQA to some real data—in this case, [song lyrics](data/rqaCategorical/lyricsA.txt). \n",
+    "Now that all the utilities are loaded, it's time to apply RQA to some real data — in this case, [song lyrics](data/rqaCategorical/lyricsA.txt). \n",
     "\n",
     "First, we need to represent the lyrics as a sequence of categorical integers. This means each word is assigned a unique number, starting from the first word and moving forward (e.g., ‘I’ = 1, ‘need’ = 2, ‘to’ = 3, etc.). For the files we're using, this encoding has already been done for you.\n",
     "\n",
