dfa updated, windowed dfa added, cm added

--- a/rqaContinuous.ipynb
+++ b/rqaContinuous.ipynb
@@ -20,6 +20,8 @@
     "- Entropy (ENT): The Shannon entropy of the distribution of diagonal line lengths, which measures the complexity of recurrent patterns.\n",
     "- Laminarity (LAM): The percentage of recurrent points forming vertical lines, which can reflect how states are trapped for extended periods.\n",
     "\n",
+    "Notably, for auto-recurrence metrics, the main diagonal (i.e., the line of identity) is excluded from RQA metrics, as it simply reflects a point being recurrent with itself.\n",
+    "\n",
     "#### Parameters for Running Continuous RQA\n",
     "\n",
     "To run RQA for continuous data, we need to select three parameters:\n",
