readme updated, catCRQA added

--- a/dfaAnalysis.ipynb
+++ b/dfaAnalysis.ipynb
@@ -19,8 +19,7 @@
     "#### Let's Practice Running DFA\n",
     "Before we begin, we need to import and load various packages and utilities. These will allow us to import the data, manipulate it, run DFA, and create visualisations to explore our results.\n",
     "\n",
-    "The code below will do all the setup for you. Simply click the \"play\" button on the left to run the code, and we'll be ready to start our analysis.\n",
-    "\n"
+    "The code below will do all the setup for you. Simply click the \"play\" button on the left to run the code, and we'll be ready to start our analysis.\n"
    ]
   },
   {
