--- a/rqaCategorical.ipynb
+++ b/rqaCategorical.ipynb
@@ -20,6 +20,8 @@
     "- Entropy (ENT): The Shannon entropy of the distribution of diagonal line lengths, which measures the complexity of recurrent patterns.\n",
     "- Laminarity (LAM): The percentage of recurrent points forming vertical lines, which can reflect how states are trapped for extended periods.\n",
     "\n",
+    "Notably, for auto-recurrence metrics, the main diagonal (i.e., the line of identity) is excluded from RQA metrics, as it simply reflects a point being recurrent with itself.\n",
+    "\n",
     "#### Parameters for Running Categorical RQA\n",
     "\n",
     "To run categorical RQA, we need to set three parameters:\n",
@@ -204,7 +206,7 @@
    "source": [
     "#### Comparing the Results\n",
     "\n",
-    "If you examine the recurrence plots (RPs) and the resulting RQA metrics, you'll notice that the second song shows more recurrent activity compared to the first. There are more blue lines in the second plot, and the %REC (recurrence rate) and %DET (determinism) values are higher, indicating greater overall repetition and more extended sequences of repeating phrases."
+    "If you examine the recurrence plots (RPs) and the resulting RQA metrics, you'll notice that the second song shows more recurrent activity than the first. There are more blue lines in the second plot, and the %REC (recurrence rate) and %DET (determinism) values are higher, indicating greater overall repetition and more extended sequences of repeating phrases."
    ]
   },
   {
