--- a/complexityMatching.ipynb
+++ b/complexityMatching.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In other sections of this tutorial, like [DFA](dfaAnalysis.ipynb) and [Windowed DFA](dfaWindowed.ipynb), we learnt how to run DFA. Interestingly, fractal scaling in human behavior tends to match that of an interacting system. This phenomenon, termed complexity matching, can index the convergence of behavioural at a global (i.e., non-local) level. \n",
+    "In other sections of this tutorial, like [DFA](dfaAnalysis.ipynb) and [Windowed DFA](dfaWindowed.ipynb), we learnt how to run DFA. Notably, fractal scaling in human behavior tends to match that of an interacting system. This phenomenon, termed complexity matching, can index the convergence of behaviour at a global (i.e., non-local) level. \n",
     "\n",
     "There are several approaches to computing complexity matching:\n",
     "- Correlating 𝛼 across the sample: Traditionally, a correlation between the overall 𝛼 values within a sample is used to calculate complexity matching. \n",
@@ -19,11 +19,11 @@
     "- Cross correlation using windowed DFA 𝛼 values: More recently, researchers have employed cross-correlation analysis using 𝛼 values from [Windowed DFA](dfaWindowed.ipynb).\n",
     "- Detrended cross correlation anaylsis (DCCA): This is a bivariate generalisation of DFA that is designed to detect power-law cross-correlations, in turn quantifying complexity matching. \n",
     "\n",
-    "In this section, we'll practice performing each of these.\n",
+    "In this section, we'll practice performing the first three.\n",
     "\n",
     "#### Let's Practice Running Complexity Matching\n",
     "\n",
-    "Before we begin, we need to import and load various packages and utilities. These will allow us to import the data, manipulate it, run DFA, and create visualisations to explore our results.\n",
+    "Before we begin, we need to import and load various packages and utilities. These will allow us to import the data, manipulate it, run our analyses, and create visualisations to explore our results.\n",
     "\n",
     "The code below will do all the setup for you. Simply click the \"play\" button on the left to run the code, and we'll be ready to start our analysis.\n"
    ]
@@ -32,21 +32,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\MQ20188409\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pytools\\persistent_dict.py:59: UserWarning: Unable to import recommended hash 'siphash24.siphash13', falling back to 'hashlib.sha256'. Run 'python3 -m pip install siphash24' to install the recommended hash.\n",
-      "  warn(\"Unable to import recommended hash 'siphash24.siphash13', \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "from utils.plot_utils import plot_cm_cross_cor"
    ]
   },
@@ -58,14 +48,14 @@
     "\n",
     "#### Running a Correlation\n",
     "\n",
-    "Let's start by running a correlation between 𝛼 values across a sample. In this dataset, participants' postural sway was captured while they were sitting versus standing. Let's compare correlation coefficients (i.e., complexity matching) between sitting vs standing to see whether individuals exhibited higher levels of complexity matching in one condition over the other.\n",
+    "Let's start by running a correlation between 𝛼 values across a sample. In this dataset, participants' postural sway was captured while they were sitting versus standing. Let's compare correlation coefficients (i.e., complexity matching) between sitting and standing, to see whether individuals exhibited higher levels of complexity matching in one condition over the other.\n",
     "\n",
     "Click the \"play\" button below to perform the analysis and generate the visualisations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,8 +63,8 @@
      "output_type": "stream",
      "text": [
       "Loading file: posture_dataset.txt\n",
-      "Correlation between alpha_P1 and alpha_P2 for condition 0: 0.08082449080648686\n",
-      "Correlation between alpha_P1 and alpha_P2 for condition 1: 0.28140353559899006\n",
+      "Correlation between participant 1 and participant 2 for condition 0: 0.08\n",
+      "Correlation between participant 1 and participant 2 for condition 1: 0.28\n",
       "Correlation analysis completed successfully!\n"
      ]
     }
@@ -94,13 +84,13 @@
     "    # Load the CSV file into a DataFrame\n",
     "    data = pd.read_csv(file_path, sep='\\t')\n",
     "\n",
-    "    # Group by 'cond' and run correlation between 'alpha_P1' and 'alpha_P2'\n",
+    "    # Group by 'cond' and run correlation between participant 1 ('alpha_P1') and participant 2 ('alpha_P2')\n",
     "    grouped = data.groupby('cond')\n",
     "    correlations = {}\n",
     "    for cond, group in grouped:\n",
     "        correlation = group['alpha_p1'].corr(group['alpha_p2'])\n",
-    "        correlations[cond] = correlation\n",
-    "        print(f'Correlation between alpha_P1 and alpha_P2 for condition {cond}: {correlation}')\n",
+    "        correlations[cond] = round(correlation, 2)\n",
+    "        print(f'Correlation between participant 1 and participant 2 for condition {cond}: {correlations[cond]}')\n",
     "\n",
     "    print('Correlation analysis completed successfully!')\n",
     "else:\n",
@@ -127,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -135,8 +125,8 @@
      "output_type": "stream",
      "text": [
       "Loading file: posture_dataset.txt\n",
-      "Mean absolute difference between alpha_P1 and alpha_P2 for condition 0: 0.07506493506493508\n",
-      "Mean absolute difference between alpha_P1 and alpha_P2 for condition 1: 0.07915584415584416\n",
+      "Mean absolute difference between participant 1 and participant 2 for condition 0: 0.075\n",
+      "Mean absolute difference between participant 1 and participant 2 for condition 1: 0.079\n",
       "Difference score analysis completed successfully!\n"
      ]
     }
@@ -162,8 +152,8 @@
     "    \n",
     "    # Compare the absolute differences across conditions\n",
     "    for cond, group in grouped:\n",
-    "        mean_diff = group['alpha_diff'].mean()\n",
-    "        print(f'Mean absolute difference between alpha_P1 and alpha_P2 for condition {cond}: {mean_diff}')\n",
+    "        mean_diff = round(group['alpha_diff'].mean(), 3)\n",
+    "        print(f'Mean absolute difference between participant 1 and participant 2 for condition {cond}: {mean_diff}')\n",
     "\n",
     "    print('Difference score analysis completed successfully!')\n",
     "else:\n",
@@ -190,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -283,19 +273,6 @@
     "As with the first correlation we conducted, individuals exhibited higher levels of complexity matching when standing as opposed to sitting.\n",
     "\n",
     "Here we've focused on lag zero, because this is where the maximum correlation primarily occurred in this dataset.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Detrended Cross-Correlation Analysis\n",
-    "\n",
-    "To be added... \n",
-    "\n",
-    "##### Interpreting the Results\n",
-    "\n",
-    "To be added...\n"
    ]
   },
   {
