ami tutorial added

--- a/dfaAnalysis.ipynb
+++ b/dfaAnalysis.ipynb
@@ -24,18 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\MQ20188409\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pytools\\persistent_dict.py:59: UserWarning: Unable to import recommended hash 'siphash24.siphash13', falling back to 'hashlib.sha256'. Run 'python3 -m pip install siphash24' to install the recommended hash.\n",
-      "  warn(\"Unable to import recommended hash 'siphash24.siphash13', \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -55,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +80,7 @@
     "data_directory = \"data/dfa/\"\n",
     "\n",
     "# Then decide whether you'd like to save the plots \n",
-    "# These are saved in \"images/rqa\"\n",
+    "# These are saved in \"images/dfa\"\n",
     "save_image = True\n",
     "\n",
     "# Set the file name for the data\n",
