ami and fnn tutorials added, mdrqa updated

--- a/mdrqaContinuous.ipynb
+++ b/mdrqaContinuous.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multidimensional Recurrence Quantification Analysis"
+    "## Multidimensional Recurrence Quantification Analysis\n",
+    "---"
    ]
   },
   {
@@ -65,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading file: object_move.txt\n"
+      "Loading file: object_move_real.txt\n"
      ]
     },
     {
@@ -89,8 +90,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recurrence Rate: 0.0015451421404798272\n",
-      "Maxline: 8489\n",
       "MdRQA analysis and plotting completed successfully!\n"
      ]
     }
