--- a/rqaWindowed.ipynb
+++ b/rqaWindowed.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Windowed RQA"
+    "## Windowed RQA\n",
+    "---"
    ]
   },
   {
@@ -50,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that all the utilities are loaded, it's time to apply RQA to some real data—in this case, [acceleration data](data/rqaContinuous/walkerAfriend.txt) from a person walking. This data was also used previously in the [Categorical RQA](rqaCategorical.ipynb) section. As such, you can compare those results to understand how a windowed analysis differs from non-windowed RQA.\n",
+    "Now that all the utilities are loaded, it's time to apply RQA to some real data — in this case, [acceleration data](data/rqaContinuous/walkerAfriend.txt) from a person walking. This data was also used previously in the [Continuous RQA](rqaContinuous.ipynb) section. As such, you can compare those results to understand how a windowed analysis differs from non-windowed RQA.\n",
     "\n",
     "For our windowed RQA, we need to select an appropriate window size. The acceleration data was sampled at 50 Hz (i.e., 50 times per second), and the time series is 10 minutes long, resulting in a total of 30,000 samples. Let's set a window size of 1 minute, which corresponds to 3000 samples. We'll also set the overlap between consecutive windows to 50%, meaning that each window overlaps the next by 30s. \n",
     "\n",
