rqa graphs fixed

--- a/crqaCategorical.ipynb
+++ b/crqaCategorical.ipynb
@@ -42,18 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Github Repos\\Linear-NonLinear-TSAnalysis\\.venv\\Lib\\site-packages\\pytools\\persistent_dict.py:63: RecommendedHashNotFoundWarning: Unable to import recommended hash 'siphash24.siphash13', falling back to 'hashlib.sha256'. Run 'python3 -m pip install siphash24' to install the recommended hash.\n",
-      "  warn(\"Unable to import recommended hash 'siphash24.siphash13', \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -75,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -148,13 +139,13 @@
     "    crqa_results, rp_results = perform_crqa(data, crqa_params)\n",
     "\n",
     "    # Create RQA metrics dictionary\n",
-    "    for column, result in crqa_results.items():\n",
+    "    if rp_results is not None:\n",
     "        crqa_metrics = {\n",
-    "             'Recurrence Rate': crqa_results.get('perc_recur'),\n",
-    "             'Determinism': crqa_results.get('perc_determ'),\n",
-    "             'Maxline': crqa_results.get('maxl_found'),\n",
-    "             'Meanline': crqa_results.get('llmnsd')[0], \n",
-    "             'Entropy': crqa_results.get('entropy')[0], \n",
+    "            'Recurrence Rate': crqa_results.get('perc_recur'),\n",
+    "            'Determinism': crqa_results.get('perc_determ'),\n",
+    "            'Maxline': crqa_results.get('maxl_found'),\n",
+    "            'Meanline': crqa_results.get('llmnsd')[0], \n",
+    "            'Entropy': crqa_results.get('entropy')[0],\n",
     "        }\n",
     "\n",
     "    # Plot time series and recurrence plot side-by-side\n",
@@ -183,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -281,13 +272,13 @@
     "        crqa_results, rp_results = perform_crqa(data, crqa_params)\n",
     "\n",
     "        # Create RQA metrics dictionary\n",
-    "        for column, result in crqa_results.items():\n",
+    "        if rp_results is not None:\n",
     "            crqa_metrics = {\n",
-    "            'Recurrence Rate': crqa_results.get('perc_recur'),\n",
-    "             'Determinism': crqa_results.get('perc_determ'),\n",
-    "             'Maxline': crqa_results.get('maxl_found'),\n",
-    "             'Meanline': crqa_results.get('llmnsd')[0], \n",
-    "             'Entropy': crqa_results.get('entropy')[0], \n",
+    "                'Recurrence Rate': crqa_results.get('perc_recur'),\n",
+    "                'Determinism': crqa_results.get('perc_determ'),\n",
+    "                'Maxline': crqa_results.get('maxl_found'),\n",
+    "                'Meanline': crqa_results.get('llmnsd')[0], \n",
+    "                'Entropy': crqa_results.get('entropy')[0],\n",
     "            }\n",
     "\n",
     "        # Plot time series and recurrence plot side-by-side\n",
