linear metrics updated

--- a/sandbox_testing.ipynb
+++ b/sandbox_testing.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,12 +82,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Mean period and amplitude\n",
+    "##### Mean Period and Amplitude\n",
     "\n",
     "Let's start by calculating the mean period and amplitude of each pendulum. To do this, you'll need to set the sample rate, as well as the minimum peak distance (as a fraction of the sample rate) and the minimum peak height (as a fraction of the maximum value). For the current data these have been set to:\n",
     "- Sample rate = 120\n",
-    "- Minimum peak distance - 0.5\n",
-    "- Minimum peak height - 0.2"
+    "- Minimum peak distance - 0.3\n",
+    "- Minimum peak height - 0.1\n",
+    "\n",
+    "Let's calculate the mean period for each person:"
    ]
   },
   {
@@ -96,25 +98,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Calculates mean and SD period\n",
-    "meanPeriod, sdPeriod, peaks, pkLocs = period(data, samplerate=120, DistFLT=0.5, AmpFLT=0.2)\n",
-    "print(meanPeriod, sdPeriod)\n",
-    "plot_period(data, 100, peaks, pkLocs)\n",
+    "## participant 1\n",
+    "meanPeriod, sdPeriod, peaks, pkLocs = period(data.iloc[:, 0], samplerate=120, DistFLT=0.3, AmpFLT=0.1)\n",
+    "print(f'Participant 1: \\nMean period: {meanPeriod}')\n",
+    "print(f'Standard deviation period: {sdPeriod}')\n",
+    "plot_period(data.iloc[:, 0], 120, peaks, pkLocs)\n",
     "\n",
-    "# Calculates mean and SD amplitude\n",
-    "meanAmp, sdAmp, peaks, pkLocs, valleys, vLocs = amplitude(data, samplerate=120, DistFLT=0.5, AmpFLT=0.2)\n",
-    "print(meanAmp, sdAmp)\n",
-    "plot_amplitude(data, 100, peaks, pkLocs, valleys, vLocs)"
+    "## participant 2\n",
+    "meanPeriod, sdPeriod, peaks, pkLocs = period(data.iloc[:, 1], samplerate=120, DistFLT=0.3, AmpFLT=0.1)\n",
+    "print(f'Participant 2: \\nMean period: {meanPeriod}')\n",
+    "print(f'Standard deviation period: {sdPeriod}')\n",
+    "plot_period(data.iloc[:, 1], 120, peaks, pkLocs)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Interpreting the Results\n",
+    "##### Interpreting the Results\n",
     "\n",
-    "If your code ran successfully, you should see two graphs with two time series - one for participant A and one for participant B."
+    "If your code ran successfully, you should see that each participant shows a similar mean and standard deviation of period (M = 0.4, SD = 0.01). You should also see a graph for each participant with the peaks highlighted.  \n",
+    "\n",
+    "Now let's calculate the mean amplitude:"
    ]
   },
   {
@@ -123,17 +129,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate auto-correlation for each participant\n",
-    "lags_x, corr_x = auto_correlation(data_x, 100)\n",
+    "# Calculates mean and SD amplitude\n",
+    "## participant 1\n",
+    "meanAmp, sdAmp, peaks, pkLocs, valleys, vLocs = amplitude(data.iloc[:, 0], samplerate=120, DistFLT=0.3, AmpFLT=0.1)\n",
+    "print(f'Participant 1: \\nMean amplitude: {meanAmp}')\n",
+    "print(f'Standard deviation amplitude: {sdAmp}')\n",
+    "plot_amplitude(data.iloc[:, 0], 120, peaks, pkLocs, valleys, vLocs)\n",
     "\n",
-    "#plot auto-correlation\n",
-    "plot_autocorrelation(lags_x, corr_x)\n",
+    "## participant 2\n",
+    "meanAmp, sdAmp, peaks, pkLocs, valleys, vLocs = amplitude(data.iloc[:, 1], samplerate=120, DistFLT=0.3, AmpFLT=0.1)\n",
+    "print(f'Participant 2: \\nMean amplitude: {meanAmp}')\n",
+    "print(f'Standard deviation amplitude: {sdAmp}')\n",
+    "plot_amplitude(data.iloc[:, 1], 120, peaks, pkLocs, valleys, vLocs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Interpreting the Results\n",
     "\n",
-    "# Calculate cross-correlation between participants\n",
-    "cross_loags, cross_corr = cross_correlation(data_x, data_y, 100)\n",
-    "\n",
-    "#plot cross-correlation\n",
-    "plot_crosscorrelation(cross_loags, cross_corr)"
+    "If your code ran successfully, you should see that each participant shows a similar mean and standard deviation of amplitude (M = 1.4, SD = 0.1). You should also see a graph for each participant with the peaks and valleys highlighted.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Spectral Analysis and Cross Spectral Coherence"
    ]
   },
   {
@@ -142,17 +165,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# Example 1D time series data\n",
-    "x = data_x\n",
-    "y = data_y\n",
-    "\n",
-    "samplerate = 100\n",
+    "samplerate = 120\n",
     "window_size = 256\n",
     "window_overlap = 0.5\n",
     "\n",
     "# Perform cross-spectral coherence analysis\n",
-    "cohere_stats, FP1, FP2, cohereFP = cross_spectral_coherence(x, y, samplerate, window_size, window_overlap)\n",
+    "cohere_stats, FP1, FP2, cohereFP = cross_spectral_coherence(data.iloc[:, 0], data.iloc[:, 1], samplerate, window_size, window_overlap)\n",
     "\n",
     "# Print average coherence\n",
     "print(f'Average Coherence (across spectrum): {cohere_stats[0]}')\n",
@@ -167,29 +185,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Auto and Cross-Correlation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(os.path.join('data/crqaContinuous', 'pendulums.txt'), sep='\\t', header=None)\n",
+    "# Calculate auto-correlation for each participant\n",
+    "lags_x, corr_x = auto_correlation(data.iloc[:, 0], 120)\n",
+    "plot_autocorrelation(lags_x, corr_x)\n",
     "\n",
-    "x1 = data[0]\n",
-    "x2 = data[1]\n",
+    "# Calculate auto-correlation for each participant\n",
+    "lags_x, corr_x = auto_correlation(data.iloc[:, 1], 120)\n",
+    "plot_autocorrelation(lags_x, corr_x)\n",
+    "\n",
+    "# Calculate cross-correlation between participants\n",
+    "cross_loags, cross_corr = cross_correlation(data.iloc[:, 0], data.iloc[:, 1], 120)\n",
+    "plot_crosscorrelation(cross_loags, cross_corr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Relative Phase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "samplerate = 120  # 100 Hz sampling rate\n",
     "\n",
-    "# Perform synchrony analysis and plot results\n",
-    "meanRP, sdRP, rvRP, radians = irp(x1, x2)\n",
+    "# Perform relative phase analysis and plot results\n",
+    "meanRP, sdRP, rvRP, radians = irp(data.iloc[:, 0], data.iloc[:, 1])\n",
     "print(f'RP: mean = {meanRP}  sd = {sdRP}   rho = {rvRP}')\n",
     "plot_irp(radians, samplerate)\n",
     "plot_rp_distribution(radians)\n",
     "\n",
-    "meanRP, sdRP, rvRP, radians, peaks = drp(x1, x2, samplerate)\n",
+    "meanRP, sdRP, rvRP, radians, peaks = drp(data.iloc[:, 0], data.iloc[:, 1], samplerate)\n",
     "print(f'RP: mean = {meanRP}  sd = {sdRP}   rho = {rvRP}')\n",
     "plot_drp(radians, peaks, samplerate)\n",
     "plot_rp_distribution(radians, samplerate) \n",
     "\n",
-    "return_plot(x1, x2, samplerate)"
+    "#return_plot(data.iloc[:, 0], data.iloc[:, 1], samplerate)"
    ]
   }
  ],
